--- a/gr-qc-0010055/bh-evaporation-notes.tex
+++ b/gr-qc-0010055/bh-evaporation-notes.tex
@@ -227,7 +227,7 @@ $G=c=\hbar
 
 A black hole is a region in an asymptotically flat spacetime which is not
 contained in the
-past of future null infinity $\finf$.  The horizon is the
+past of future null infinity $\finf\!$.  The horizon is the
 boundary between the black hole and the outside, asymptotically flat region.
 In section (\ref{section6}) we will study a black hole in a spacetime which is not
 asymptotically flat using an obvious generalization of the definition.
@@ -742,13 +742,13 @@ normalizable states $F,J,Q,P$.
 
 In the black hole calculation, boundary conditions on the
 scalar field $\phi$ are set on $\pinf\!$, so we will proceed analogously here.
-Given a positive frequency, outward propagating Rindler wave packet on $\finf$,
+Given a positive frequency, outward propagating Rindler wave packet on $\finf\!$,
 one wants to solve the wave equation to find the form of the wave packet in
 the far past.
 One then decomposes this into a sum over positive and negative frequency
 parts with respect
 to the Rindler coordiante $v$. The calculation is most simply carried out
-mode by mode, {\it i.e.} for $\phi \rightarrow  e^{-i\omega u}$ on $\finf$.
+mode by mode, {\it i.e.} for $\phi \rightarrow  e^{-i\omega u}$ on $\finf\!$.
 In the
 Rindler wedge, the past boundary is $\ph$ plus $\pinf\!$. Because spacetime
 is flat, there is
@@ -998,7 +998,7 @@ to the wave equation with boundary conditions that on $\finf$
 \be\label{outmodes}\p \rightarrow e^{-i\omega u}.\ee
 %
 The coordinate $u$ is an outgoing null coordinate and is the affine parameter
-for the null geodesic generators of $\finf$.
+for the null geodesic generators of $\finf\!$.
 Again, this choice of positive frequency late time modes coincides
 with the usual choice in Minkowski spacetime.
 
@@ -1058,7 +1058,7 @@ scatters in two parts. A fraction $1-\Gamma _{\omega}$ of the packet
 backscatters
 off the  curved geometry, {\it i.e.} due to the potential $W(r)$ in
 (\ref{waveschw}), and propagates
-out to $\finf$, essentially without a change of frequency.
+out to $\finf\!$, essentially without a change of frequency.
 The remaining fraction $\Gamma _{\omega}$ propagates parallel to $\ph$ and
 is absorbed by the black hole horizon. It is this second portion
 that leads to the particle production.  Therefore, we can write
@@ -1082,7 +1082,7 @@ on the coefficients in the following.
 
 Hawking did the calculation by studying a wave propagating
 backwards in time in the collapsing star spacetime.  Choose
-boundary conditions such that the wave is positive frequency on $\finf$,
+boundary conditions such that the wave is positive frequency on $\finf\!$,
 so that the scalar field $\phi\rightarrow\p$ as in (\ref{outmodes}).
 The goal is then to solve for the behavior of the scalar field $\phi$ on
 $\pinf$ and to decompose the wave into positive and negative frequency parts there.
@@ -1111,7 +1111,7 @@ passing close to the black hole horizon $\fh\!$. The ray passes through the
 collapsing star and then propagates out to $\pinf$ along a geodesic $v=v_1$,
 which is close to $v=v_0$. The ray $v=v_0$, shown in figure (\ref{f4}), is the
 last inward
-propagating ray on the surface of the star that reaches $\finf$. Inward
+propagating ray on the surface of the star that reaches $\finf\!$. Inward
 propagating rays
 with  $v>v_o$ enter the black hole. In the extended spacetime $v=v_o$ would be
 the white hole horizon $\ph\!$.
@@ -1184,7 +1184,7 @@ on $\pinf\!$.
 
 Equation (\ref{changev}) is the desired relation between $u$ and $v$.
 For a solution to the scalar wave equation $\nabla _a \nabla ^a \phi =0$ that
-has the boundary condition $\phi\sim e^{-i\omega u}$ at $\finf$, we have
+has the boundary condition $\phi\sim e^{-i\omega u}$ at $\finf\!$, we have
 on $\pinf$
 %
 \bena\label{inwave}
