--- a/1910.11629/runners-in-action.tex
+++ b/1910.11629/runners-in-action.tex
@@ -1,4 +1,4 @@
-\documentclass[runningheads,envcountsame]{llncs}
+\documentclass[12pt,runningheads,envcountsame]{llncs}
 
 % ESOP 2020 submission - 25.10.2019
 % ESOP 2020 final version - 21.02.2020
@@ -30,6 +30,39 @@
 \let\definition\relax % undefine the environment
 \spnewtheorem{definition}{Definition}{\bfseries}{\rmfamily}
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10,
+colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true
+}
+%\usepackage[noBBpl,sc]{mathpazo}
+%\usepackage{helvet}
+%\linespread{1.05}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 
 \begin{document}
