--- a/1910.11629/runners-in-action.tex
+++ b/1910.11629/runners-in-action.tex
@@ -1,4 +1,6 @@
-\documentclass[12pt,runningheads,envcountsame]{llncs}
+\documentclass[12pt,envcountsame]{llncs}
+
+\pagestyle{plain}
 
 % ESOP 2020 submission - 25.10.2019
 % ESOP 2020 final version - 21.02.2020
@@ -46,8 +48,10 @@ colorlinks=true
 ,linktocpage=true
 }
 %\usepackage[noBBpl,sc]{mathpazo}
-%\usepackage{helvet}
 %\linespread{1.05}
+%\usepackage[scaled=.92]{helvet}
+%\DeclareMathAlphabet      {\mathsf}{OT1}{phv}{m}{n}
+
 \usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \tolerance=2000
 \hbadness=2000
