--- a/hep-th-9309067/hep-th-9309067.tex
+++ b/hep-th-9309067/hep-th-9309067.tex
@@ -4,13 +4,61 @@
 
 
 %prepared in LaTeX
+\documentclass[12pt]{article}
+	
+	%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+\titleformat{\section}[block]
+  {\fillast}
+  {\normalsize\bfseries{\thesection }.}
+  {1ex minus .1ex}
+  {\normalsize\bfseries}
+  
+\titleformat{\subsection}[block]
+  {\fillast}
+  {{\it \thesection }}
+  {1ex minus .1ex}
+  {\it}
+
+\titleformat*{\subsubsection}{\large\scshape}
+
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
 
 	\hfuzz = 6pt
         \newcommand{\DOT}{\hspace{-0.08in}{\bf .}\hspace{0.1in}}
 	\newcommand\Hom{{\rm Hom}}
 	\newcommand{\ban}{\begin{eqnarray*}}
         \newcommand{\ean}{\end{eqnarray*}}
-	\def\section#1{\vskip3em{\centerline {\bf#1}}\vskip3em}
+	
+	\thispagestyle{empty}
 
 	%\newfam\msyfam
 	%\font\tenmsy=msym10
@@ -68,15 +116,14 @@
 	\newcommand{\Fun}{{\rm Fun}}
 	\newtheorem{theorem}{Theorem}
 
-	\documentstyle[12pt]{article}
-	\textwidth 6in
-	\textheight 8.5in
-	\evensidemargin .25in
-	\oddsidemargin .25in
-	\topmargin .25in
-	\headsep 0in
-	\headheight 0in
-	\footskip .5in
+	
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 	%If you want 1.5-spaced copy, put in the next two lines.
 	%\parskip 1.75\parskip plus 3pt minus 1pt
 	%\renewcommand{\baselinestretch}{1.5}
@@ -121,6 +168,9 @@ interpretation of quantum gravity in 3 dimensions gives rise to
 conjectures about integrals on the moduli space of flat connections,
 while in 4 dimensions there may be connections to the theory of 2-tangles.
 \end{abstract}
+
+\newpage
+	\pagestyle{plain}
 
 \section{Introduction}
 
