--- a/hep-th-9309067/hep-th-9309067.tex
+++ b/hep-th-9309067/hep-th-9309067.tex
@@ -36,7 +36,7 @@ bookmarksopenlevel=10
 
 \titleformat{\section}[block]
   {\fillast}
-  {\normalsize\bfseries{\thesection }.}
+  {\normalsize\bfseries{\thesection }}
   {1ex minus .1ex}
   {\normalsize\bfseries}
   
@@ -349,10 +349,10 @@ just the $L^2$ inner product
 We assume for convenience that this really is an inner product, i.e.\
 it is nondegenerate.
 Define the ``kinematical state space''
-$\H_{kin}$ to be the Hilbert space completion of
+$\H_{\textit{kin}}$ to be the Hilbert space completion of
 $\Fun(\M)$ in the norm associated to this inner product.
 
-Following ideas from canonical quantum gravity, we do not expect $\H_{kin}$
+Following ideas from canonical quantum gravity, we do not expect $\H_{\textit{kin}}$
 to be the true space of physical states.   In the space of physical states,
 any two states differing by a diffeomorphism of spacetime are identified.
 The physical state space thus depends on the dynamics of the theory.
@@ -374,25 +374,25 @@ interested in generally covariant theories, this path integral is assumed
 to have some invariance properties, which we note below as they are needed.
 
 Using the standard recipe in topological quantum field theory, we define
-the ``physical inner product'' on $\H_{kin}$ by
+the ``physical inner product'' on $\H_{\textit{kin}}$ by
 \[ \langle \psi,\phi \rangle_{phys} = \int_{\M} \int_{\M}
  \int_{\P(\gamma,\gamma')}
 \overline\psi(\gamma) \phi(\gamma') \, e^{iS(f)} \D f \D\gamma \D\gamma'\]
 assuming optimistically that this integral is well-defined.
 We do not actually assume this is an inner product in the standard
 sense, for while we assume
-$\langle \psi,\psi \rangle \ge 0$ for all $\psi \in \H_{kin}$, we do not
+$\langle \psi,\psi \rangle \ge 0$ for all $\psi \in \H_{\textit{kin}}$, we do not
 assume positive definiteness.
 The general covariance of the theory should imply that this inner
 product is independent of the choice of time $T > 0$, so we assume this
 as well.
 
-Define the space of norm-zero states $\I \subseteq \H_{kin}$ by
+Define the space of norm-zero states $\I \subseteq \H_{\textit{kin}}$ by
 \ban        \I &=& \{ \psi | \; \langle\psi,\psi\rangle_{phys} = 0\} \\
 &=&   \{ \psi | \;  \langle\psi,\phi \rangle_{phys}
-= 0 \;{\rm for \; all }\; \phi \in \H_{kin} \}  \ean
-and define the ``physical state space'' $\H_{phys}$ to be the Hilbert
-space completion of $\H_{kin}/\I$ in the norm associated to the
+= 0 \;{\rm for \; all }\; \phi \in \H_{\textit{kin}} \}  \ean
+and define the ``physical state space'' $\H_{\textit{phys}}$ to be the Hilbert
+space completion of $\H_{\textit{kin}}/\I$ in the norm associated to the
 physical inner product.
 In general $\I$ is nonempty, because if $g \in \Diff_0(X)$ is a
 diffeomorphism in the connected component of the identity,
@@ -421,23 +421,23 @@ integral.
 It follows that $\I$ includes the space $\J$, the closure of the
 span of all vectors of
 the form $\psi - g\psi$.  We can therefore define the (spatially)
-``diffeomorphism-invariant state space'' $\H_{diff}$ by
-$\H_{diff} = \H_{kin} /\J $
-and obtain $\H_{phys}$ as a Hilbert space completion
-of $\H_{diff}/\K$, where $\K$ is the image of $\I$ in $\H_{diff}$.
+``diffeomorphism-invariant state space'' $\H_{\textit{diff}}$ by
+$\H_{\textit{diff}} = \H_{\textit{kin}} /\J $
+and obtain $\H_{\textit{phys}}$ as a Hilbert space completion
+of $\H_{\textit{diff}}/\K$, where $\K$ is the image of $\I$ in $\H_{\textit{diff}}$.
 
 To summarize, we obtain the physical state space from the kinematical
 state space by taking two quotients:
-\ban         \H_{kin} &\to&  \H_{kin}/\J \;\; =\, \H_{diff} \\
-             \H_{diff} &\to&  \H_{diff}/\K \hookrightarrow \H_{phys}. \ean
+\ban         \H_{\textit{kin}} &\to&  \H_{\textit{kin}}/\J \;\; =\, \H_{\textit{diff}} \\
+             \H_{\textit{diff}} &\to&  \H_{\textit{diff}}/\K \hookrightarrow \H_{\textit{phys}}. \ean
 As usual in canonical quantum gravity and topological quantum field
 theory, there is no Hamiltonian; instead, all the information about
 dynamics is contained in the physical inner product.   The reason, of
 course, is that the path integral, which in traditional quantum field
 theory described time evolution, now describes the physical inner product.
-The quotient map $\H_{diff} \to \H_{phys}$, or equivalently its kernel
+The quotient map $\H_{\textit{diff}} \to \H_{\textit{phys}}$, or equivalently its kernel
 $\K$, plays the role of a ``Hamiltonian constraint.''     The quotient map
-$\H_{kin} \to \H_{diff}$, or equivalently its kernel $\J$, plays the role
+$\H_{\textit{kin}} \to \H_{\textit{diff}}$, or equivalently its kernel $\J$, plays the role
 of the ``diffeomorphism constraint,'' which is independent of the dynamics.
 (Strictly speaking, we should call $\K$ the ``dynamical constraint,'' as we
 shall see that it expresses constraints on the initial data other than
@@ -446,9 +446,9 @@ constraints'' arising in gauge theory.)
 
 It is common in canonical quantum gravity to proceed in a slightly
 different manner than we have done here, using subspaces at certain points
-where we use quotient spaces \cite{RS,RS2}. For example, $\H_{diff}$ may be
-defined as the subspace of $\H_{kin}$ consisting of states invariant under
-the action of $\Diff_0(X)$, and $\H_{phys}$ then defined as the kernel of
+where we use quotient spaces \cite{RS,RS2}. For example, $\H_{\textit{diff}}$ may be
+defined as the subspace of $\H_{\textit{kin}}$ consisting of states invariant under
+the action of $\Diff_0(X)$, and $\H_{\textit{phys}}$ then defined as the kernel of
 certain operators, the Hamiltonian constraints.   The method of working
 solely with quotient spaces, has, however, been studied by Ashtekar
 \cite{Ash}.
@@ -458,34 +458,34 @@ dictated by the desire for convenience and/or rigor.  As a heuristic
 guiding principle, however, it is worth noting that
 the subspace and quotient space approaches are essentially equivalent if
 we assume that the subspace $\I$ is closed in the norm topology on
-$\H_{kin}$.   Relative to the kinematical inner product, we can identify
-$\H_{diff}$ with the orthogonal complement $\J^\perp$, and similarly identify
-$\H_{phys}$ with $\I^\perp$.  From this point of
+$\H_{\textit{kin}}$.   Relative to the kinematical inner product, we can identify
+$\H_{\textit{diff}}$ with the orthogonal complement $\J^\perp$, and similarly identify
+$\H_{\textit{phys}}$ with $\I^\perp$.  From this point of
 view we have
-\[             \H_{phys} \subseteq \H_{diff} \subseteq \H_{kin}  .\]
+\[             \H_{\textit{phys}} \subseteq \H_{\textit{diff}} \subseteq \H_{\textit{kin}}  .\]
 Moreover, $\psi \in
-\H_{diff}$ if and only if $\psi$ is invariant under the action of
-$\Diff_0(X)$ on $\H_{kin}$.
+\H_{\textit{diff}}$ if and only if $\psi$ is invariant under the action of
+$\Diff_0(X)$ on $\H_{\textit{kin}}$.
 To see this, first note that if $g\psi = \psi$ for all $g\in
-\Diff_0(X)$, then for all $\phi \in \H_{kin}$ we have
+\Diff_0(X)$, then for all $\phi \in \H_{\textit{kin}}$ we have
 \[         \langle \psi, g\phi - \phi \rangle =
 \langle g^{-1}\psi - \psi, \phi \rangle = 0 \]
 so $\psi \in \J^{\perp}$.   Conversely, if $\psi \in \J^\perp$,
 \[        \langle \psi, g\psi - \psi\rangle = 0 \]
 so $\langle \psi,\psi \rangle = \langle\psi,g\psi \rangle$, and since
-$g$ acts unitarily on $\H_{kin}$ the Cauchy-Schwarz inequality implies
+$g$ acts unitarily on $\H_{\textit{kin}}$ the Cauchy-Schwarz inequality implies
 $g\psi = \psi$.
 
 The approach using subspaces is the one with the clearest connection to
 knot theory.
-An element $\psi \in \H_{kin}$ is function on the space of multiloops.
+An element $\psi \in \H_{\textit{kin}}$ is function on the space of multiloops.
 If $\psi$ is invariant under the action of $\Diff_0(X)$, we call $\psi$
 a ``multiloop invariant.''  In particular, $\psi$ defines an ambient
 isotopy invariant of links in $X$ when we restrict it to links (which are
 nothing but multiloops that happen to be embeddings).   We see therefore that
 in this situation the physical states define link invariants.  As a
 suggestive example, take $X = S^3$, and take as the Hamiltonian
-constraint an operator $H$ on $\H_{diff}$
+constraint an operator $H$ on $\H_{\textit{diff}}$
 that has the property described in Figure \ref{3d}.
 \begin{figure}
 \centering
@@ -516,7 +516,7 @@ that has the property described in Figure \ref{3d}.
 \end{figure}
 Here $a,b,c \in \C$ are arbitrary.   This Hamiltonian constraint represents
 the simplest sort of diffeomorphism-invariant two-string interaction in
-3-dimensional space.  Defining the physical space $\H_{phys}$ to be the
+3-dimensional space.  Defining the physical space $\H_{\textit{phys}}$ to be the
 kernel of $H$, it follows that any $\psi \in H_{phys}$ gives a link
 invariant that is just a multiple of the HOMFLY invariant \cite{HOMFLY}.
 For appropriate values of the parameters $a,b,c,$ we expect this sort of
@@ -551,7 +551,7 @@ containing the algebra of functions generated by Wilson loops.   We may
 alternatively think of $\Fun(\A/\G)$ as a space of
 functions on $\A/\G$ and $\D A$ as a measure on $\A/\G$.
 Assume that $\D A$ is invariant under the action of
-$\Diff_0(M)$ on $\A/\G$, and define the kinematical state space $\H_{kin}$
+$\Diff_0(M)$ on $\A/\G$, and define the kinematical state space $\H_{\textit{kin}}$
 to be be the Hilbert space completion of $\Fun(\A/\G)$ in the norm
 associated to the kinematical inner product
 \[ \langle \psi,\phi\rangle_{kin} = \int_{\A/\G}
@@ -565,7 +565,7 @@ transform $\hat\psi$ of $\psi\in \Fun(\A/\G)$ by
 \int_{\A/\G} \psi(A) T(\gamma_1,A) \cdots T(\gamma_n,A) \, \D A  .\]
 Take $\Fun(\M)$ to be the space of functions in the range of the loop
 transform.  Let us assume, purely for simplicity of exposition, that the
-loop transform is one-to-one.  Then we may identify $\H_{kin}$ with
+loop transform is one-to-one.  Then we may identify $\H_{\textit{kin}}$ with
 $\Fun(\M)$ just as in the string field theory case.
 
 The process of passing from the kinematical state space to the
@@ -584,29 +584,29 @@ $\P(A,A')$ which we write as $ e^{iS(a)}
 \D a$, using $a$ to denote a connection on $P|_{[0,T] \times X}$.
 Again, this generalized measure has some invariance properties
 corresponding to the general covariance of the gauge theory.
-Define the ``physical'' inner product on $\H_{kin}$ by
+Define the ``physical'' inner product on $\H_{\textit{kin}}$ by
 \[ \langle \psi,\phi\rangle_{phys} = \int_{\A} \int_{\A} \int_{\P(A,A')}
 \overline\psi(A) \phi(A') \, e^{iS(a)} \D a\D A \D A'\]
 again assuming that this integral is well-defined and that
 $\langle \psi,\psi \rangle \ge 0$ for all $\psi$.
 This inner product should be independent of the choice of time $T > 0$.
-Letting $\I \subseteq \H_{kin}$ denote the space of norm-zero states,
-the physical state space $\H_{phys}$ of the gauge theory is
-$\H_{kin}/\I$.  As before, we can use the general covariance of the theory
+Letting $\I \subseteq \H_{\textit{kin}}$ denote the space of norm-zero states,
+the physical state space $\H_{\textit{phys}}$ of the gauge theory is
+$\H_{\textit{kin}}/\I$.  As before, we can use the general covariance of the theory
 to show that $\I$ contains the closed span $\J$ of all vectors of
-the form $\psi - g\psi$.  Letting $\H_{diff} = \H_{kin}/\J$,
-and letting $\K$ be the image of $\I$ in $\H_{diff}$, we again see
+the form $\psi - g\psi$.  Letting $\H_{\textit{diff}} = \H_{\textit{kin}}/\J$,
+and letting $\K$ be the image of $\I$ in $\H_{\textit{diff}}$, we again see
 that the physical state space is obtained by applying first the
 diffeomorphism constraint
-\[     \H_{kin} \to \H_{kin}/\J = \H_{diff}   \]
+\[     \H_{\textit{kin}} \to \H_{\textit{kin}}/\J = \H_{\textit{diff}}   \]
 and then the Hamiltonian constraint
-\[  \H_{diff} \to  \H_{diff}/\K \hookrightarrow \H_{phys}. \]
+\[  \H_{\textit{diff}} \to  \H_{\textit{diff}}/\K \hookrightarrow \H_{\textit{phys}}. \]
 
 
 In summary, we see that the Hilbert spaces for generally covariant string
 theories and generally covariant gauge theories have a similar form,  with
 the loop transform relating the gauge theory picture to the string theory
-picture.   The key point, again, is that a state $\psi$ in $\H_{kin}$ can
+picture.   The key point, again, is that a state $\psi$ in $\H_{\textit{kin}}$ can
 either be regarded as a wavefunction on the classical configuration space
 $\A$ for gauge fields, with $\psi(A)$ being the amplitude of a specified
 connection $A$, {\it or} as a wavefunction on the classical configuration
@@ -624,7 +624,7 @@ At this point it is natural to ask what is the difference, apart from
 words, between the loop representation of a generally covariant gauge
 theory and the sort of purely topological string field theory we have been
 considering.   From the Hamiltonian viewpoint (that is, in terms of the
-spaces $\H_{kin}$, $\H_{diff}$, and $\H_{phys}$) the difference is not so
+spaces $\H_{\textit{kin}}$, $\H_{\textit{diff}}$, and $\H_{\textit{phys}}$) the difference is not so
 great.  The Lagrangian for a gauge theory, on the other hand, is quite a
 different object than that of a string field theory. Note that nothing we
 have done allows the direct construction of a string field Lagrangian from
@@ -1559,20 +1559,20 @@ and Smolin \cite{RS}, is required.  Let us first sketch this without
 mentioning the
 formidable technical problems.   The Gauss law constraint generates gauge
 transformations so one forms the reduced phase space $T^\ast(\A/\G)$.
-Quantizing, one obtains the kinematical Hilbert space $\H_{kin} =
+Quantizing, one obtains the kinematical Hilbert space $\H_{\textit{kin}} =
 L^2(\A/\G)$.  One then applies the loop transform and takes
-$\H_{kin} = \Fun(\M)$ to be a space of functions of multiloops in $X$.  The
+$\H_{\textit{kin}} = \Fun(\M)$ to be a space of functions of multiloops in $X$.  The
 diffeomorphism constraint generates the action of $\Diff_0(X)$ on $\A/\G$,
-so in the quantum theory one takes $\H_{diff}$ to be the subspace of
+so in the quantum theory one takes $\H_{\textit{diff}}$ to be the subspace of
 $\Diff_0(X)$-invariant elements of $\Fun(\M)$.  One may then either attempt
-to represent the Hamiltonian constraint as operators on $\H_{kin}$, and
-define the image of their common kernel in $\H_{diff}$ to be the physical
-state space $\H_{phys}$, or attempt to represent the Hamiltonian constraint
-directly as operators on $\H_{diff}$ and define the kernel to be
-$\H_{phys}$.  (The latter approach is still under development by Rovelli
+to represent the Hamiltonian constraint as operators on $\H_{\textit{kin}}$, and
+define the image of their common kernel in $\H_{\textit{diff}}$ to be the physical
+state space $\H_{\textit{phys}}$, or attempt to represent the Hamiltonian constraint
+directly as operators on $\H_{\textit{diff}}$ and define the kernel to be
+$\H_{\textit{phys}}$.  (The latter approach is still under development by Rovelli
 and Smolin \cite{RS2}.)
 
-Even at this formal level, the full space $\H_{phys}$ has not yet been
+Even at this formal level, the full space $\H_{\textit{phys}}$ has not yet been
 determined.  In their original work, Rovelli and Smolin \cite{RS} obtained
 a large set of physical states corresponding to ambient isotopy classes of
 links in $X$.  More recently, physical states have been constructed from
@@ -1672,7 +1672,7 @@ duality.''
 We may take the ``generalized measures'' on $\A/\G$ to be simply
 elements $\mu \in \Fun(\A/\G)^\ast$, thinking of the pairing $\mu(f)$ as
 the integral of $f \in \Fun(\A/\G)$.  If $\mu$ is a state on $\Fun(\A/\G)$, we
-may construct the kinematical Hilbert space $\H_{kin}$
+may construct the kinematical Hilbert space $\H_{\textit{kin}}$
 using the GNS construction.  Note that the kinematical
 inner product
 \[          \langle [f], [g] \rangle_{kin} = \mu(f^\ast g)  \]
@@ -1684,7 +1684,7 @@ $\Fun(\A/\G)$ to $\Fun(\M)$
 \mu(T(\gamma_1) \cdots T(\gamma_n)f)  \]
 in a manner generalizing that of the previous section.  Moreover,
 there is a unique inner product on $\Fun(\M)$ such that this map
-extends to a map from $\H_{kin}$ to the Hilbert space completion of
+extends to a map from $\H_{\textit{kin}}$ to the Hilbert space completion of
 $\Fun(\M)$.
 Note also that $\Diff_0(X)$ acts on $\Fun(\A/\G)$
 and dually on $\Fun(\A/\G)^\ast$.  The kinematical Hilbert space
