--- a/9309067v1/9309067v1.tex
+++ b/9309067v1/9309067v1.tex
@@ -19,13 +19,22 @@ bookmarksopenlevel=10
 %\usepackage{amssymb}
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[noBBpl]{mathpazo}
-\linespread{1.1}
-\usepackage[letterpaper, margin=1.3in]{geometry}
 \tolerance=2000
 \usepackage{titlesec}
 \titleformat{\section}
   {\normalfont\bfseries\filcenter}{\thesection}{.75em}{}
   
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage{cite}
+
 %prepared in LaTeX
 
 	\hfuzz = 6pt
@@ -135,6 +144,9 @@ interpretation of quantum gravity in 3 dimensions gives rise to
 conjectures about integrals on the moduli space of flat connections,
 while in 4 dimensions there may be connections to the theory of 2-tangles.
 \end{abstract}
+\thispagestyle{empty}
+
+\newpage
 
 \section{Introduction}
 
