--- a/1912.10642/ct-notes-new.tex
+++ b/1912.10642/ct-notes-new.tex
@@ -1,18 +1,34 @@
-\documentclass[a4paper,11pt,oneside]{scrbook}
+\documentclass[12pt,oneside]{scrbook}
 %\documentclass[a4paper,12pt]{article}
 
 % bibliography stuff
 \usepackage[style=alphabetic]{biblatex}
 \bibliography{notes}
+\sloppy
+
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
 
 % Other packages
-\usepackage[left=2.5cm,right=2.5cm,top=2.7cm,bottom=2.7cm]{geometry} % we can adjust these values (making sure that title and TOC page look good)
+%\usepackage[left=1.5cm,right=1.5cm,top=1.7cm,bottom=1.7cm]{geometry} % we can adjust these values (making sure that title and TOC page look good)
+\usepackage[papersize={7.2in, 10.0in}, left=.6in, right=.6in, top=1in, bottom=.9in]{geometry}
 \usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{latexsym}
-\usepackage[bookmarks]{hyperref}
 \usepackage{amsthm}
 %\usepackage{eucal}
 \usepackage{graphicx}
@@ -79,7 +95,7 @@
 % PAGE SETTINGS
 \setkomafont{disposition}{\normalfont\bfseries}
 \setlength{\jot}{2ex}
-\linespread{1.2} 
+\linespread{1.1} 
 
 % CHANGE AUTHOR, TITLE, ETC HERE!
 \newcommand{\auth}[0]{Paolo Perrone}
@@ -96,9 +112,9 @@ pdfauthor={\auth},%
 pdftitle={\tit},%
 colorlinks, linktocpage=true, pdfstartpage=1, pdfstartview=FitV,%
 breaklinks=true, pdfpagemode=UseNone, pageanchor=true, pdfpagemode=UseOutlines,% 
-plainpages=false, bookmarksnumbered, bookmarksopen=true, bookmarksopenlevel=1,%
-hypertexnames=true, pdfhighlight=/O,%
-urlcolor=darkblue, linkcolor=black, citecolor=black, %}
+plainpages=false, bookmarksnumbered, bookmarksopen=true,%
+hypertexnames=true, pdfhighlight=/O,bookmarksopenlevel=10
+%
 }
 \pdfinfo{%
   /Title    (\tit)
@@ -197,6 +213,8 @@ urlcolor=darkblue, linkcolor=black, citecolor=black, %}
 
 
 
+\addtokomafont{chapter}{\fontsize{16pt}{18pt}\selectfont}
+\addtokomafont{section}{\fontsize{14pt}{16pt}\selectfont}
 
 
 % fix spacing issues with \left and \right
@@ -211,8 +229,6 @@ urlcolor=darkblue, linkcolor=black, citecolor=black, %}
 
 
 
-
-
 \title{\tit}
 \subtitle{\subtit}
 \author{\auth}
@@ -222,14 +238,16 @@ urlcolor=darkblue, linkcolor=black, citecolor=black, %}
 
 
 \begin{document}
+\pagestyle{plain}
 
 \maketitle
 
+\small
 \tableofcontents
-
+\newpage
+\normalsize
 
 %BODY
-
 
 \newpage
 \chapter*{About these notes}
