--- a/1912.10642/ct-notes-new.tex
+++ b/1912.10642/ct-notes-new.tex
@@ -90,7 +90,8 @@ bookmarksopenlevel=10
 
 %font Palladio
 \usepackage[T1]{fontenc}
-\usepackage{newpxtext,newpxmath}
+\usepackage{newpxtext}
+\usepackage{newpxmath}
 
 % PAGE SETTINGS
 \setkomafont{disposition}{\normalfont\bfseries}
@@ -126,6 +127,8 @@ hypertexnames=true, pdfhighlight=/O,bookmarksopenlevel=10
 
 
 %% MATH %%
+
+\input{../helpers/cmrsum}
 
 \numberwithin{equation}{section}
 
@@ -766,6 +769,7 @@ We see in this definition that $g$ \emph{not only} is in the opposite direction 
 Here are some examples of isomorphisms.
 
 \begin{eg}[several fields]
+\phantom{newline}
  \begin{itemize}
   \item In the category $\Set$, the isomorphisms are the bijective functions.
   \item In $\cat{Top}$, the isomorphisms are the homeomorphisms: invertible continuous maps whose inverse is continuous. Mind: this is strictly stronger than saying continuous and bijective (can you give a counterexample?).
@@ -1061,12 +1065,15 @@ Intuitively, a monomorphism is a map which ``does not map different things of $X
 Here are some examples. 
 
 \begin{eg}[several fields]
+  \phantom{newline}
+
  \begin{itemize}
   \item In $\Set$, the monomorphisms are the injective maps.
   \item In $\cat{Top}$, the monomorphisms are the injective continuous maps.
   \item In the category $\cat{FVect}$ of finite-dimensional vector spaces and linear maps, the monomorphisms are the injective linear maps.
   \item In the category $\Grp$, the monomorphisms are the injective group homomorphisms.
  \end{itemize}
+ 
 \end{eg}
 
 \begin{ex}[several fields]
