--- a/1912.10642/ct-notes-new.tex
+++ b/1912.10642/ct-notes-new.tex
@@ -896,6 +896,7 @@ Since objects and morphisms may appear more than once in the diagram, as differe
 \end{caveat}
 
 \begin{eg}
+\phantom{newline}
 \begin{itemize}
  \item The diagram 
  $$
@@ -1139,6 +1140,7 @@ Moreover, as we have said, the proof of \Cref{isoismono} only requires left inve
 In general, the converse is not true: you may know from topology, or from graph theory, that there are are injective maps which do not have a retraction. Let's see some examples more in detail.
 
 \begin{eg}[sets and relations, linear algebra]
+\phantom{newline}
  \begin{itemize}
   \item In $\Set$, every injective map has a left inverse. Therefore, every monomorphism is split. 
   \item In $\cat{FVect}$, every injective linear map has a left inverse. Therefore, again, every monomorphism is split.
@@ -1199,6 +1201,7 @@ You may not be comfortable yet with believing that \Cref{isoisepi} is true just 
 
 Here are some examples of epimorphisms.
 \begin{eg}[sets and relations, linear algebra, topology]
+\phantom{.}
  \begin{itemize}
   \item In $\Set$, the epimorphisms are the surjective maps.
   \item In $\cat{FVect}$, the epimorphisms are the surjective linear maps.
@@ -1250,6 +1253,7 @@ For example, $\R$ is at the same time a subspace and a quotient of $\R^2$, both 
 This should give us an idea of what to expect as examples of split epimorphisms.
 
 \begin{eg}[sets and relations, linear algebra]
+ \phantom{.}
  \begin{itemize}
   \item In $\Set$, every surjective map has a right inverse. Therefore, every epimorphism is split.\footnote{If you are familiar with set theory, try to show that the axiom of choice is equivalent to the statement that in $\Set$ every epimorphism is split. If you are not familiar with set theory, you can safely ignore this comment.}
   \item In $\cat{FVect}$, every surjective linear map has a right inverse. Therefore, again, every epimorphism is split.
@@ -2780,6 +2784,7 @@ Fully faithful functors are ``injective up to isomorphism'', as the following pr
 
 
 \begin{eg}[algebra, analysis]
+\phantom{.}
  \begin{itemize}
   \item The forgetful functor $\cat{AbGrp}\to\Grp$ is fully faithful. It is not essentially surjective: not every group is isomorphic to an abelian group.
   More generally, a full subcategory always defines a fully faithful ``inclusion'' functor, and vice versa. 
