--- a/1912.10642/ct-notes-new.tex
+++ b/1912.10642/ct-notes-new.tex
@@ -6,6 +6,8 @@
 \bibliography{notes}
 \sloppy
 
+\deffootnote[1em]{1em}{1em}{\textsuperscript{\thefootnotemark}}
+
 \usepackage[colorlinks=true
 ,breaklinks=true
 ,urlcolor=blue
