--- a/1303.4669/infinity-survey.tex
+++ b/1303.4669/infinity-survey.tex
@@ -1,4 +1,35 @@
-\documentclass{conm-p-l}
+\documentclass[12pt]{amsart}
+
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+\usepackage{microtype}
+
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.1}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\sloppy
+\raggedbottom
+\pagestyle{plain}
 
 \usepackage[cmtip,rotate,all]{xy}
 \usepackage{url}
@@ -54,7 +85,7 @@ the World of $(\infty,1)$-categories}
 
 \subjclass[2010]{Primary 18-01}
 
-\date{\today}
+\date{5 Sep 2013}
 
 \begin{abstract}
   This introduction to higher category theory is intended to a give
