--- a/rothman-1982-updated/rothman.tex
+++ b/rothman-1982-updated/rothman.tex
@@ -1,6 +1,8 @@
 \documentclass[12pt]{article}
 \usepackage[full]{textcomp}
-\usepackage[sups,osf]{garamondx} % osf (or tosf) for text, not math
+\usepackage[osf,semibold,scaled=1.05]{ebgaramond}
+
+%\usepackage[sups,osf]{garamondx} % osf (or tosf) for text, not math
 %\usepackage[sups,osf,p]{fbb} % osf (or tosf) for text, not math
 %\usepackage[osf,sups]{Baskervaldx}
 %\usepackage[sb,osf,p]{libertine}
