--- a/2009.05539/general-type-theories.tex
+++ b/2009.05539/general-type-theories.tex
@@ -1,9 +1,36 @@
-\documentclass[a4paper]{article}
+\documentclass[12pt]{article}
+
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+
 
 \input{preamble}
 
 \input{macros}
 
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\sloppy
+\raggedbottom
+\usepackage[small]{titlesec}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
 \begin{document}
 
 \title{A general definition of dependent type theories}
@@ -34,7 +61,9 @@
   Much of the present work has been formalised in the proof assistant Coq.
 \end{abstract}
 
+\newpage
 \tableofcontents
+\newpage
 
 \newpage
 
