--- a/2009.06722/maa-monthly-noheader.sty
+++ b/2009.06722/maa-monthly-noheader.sty
@@ -5,7 +5,7 @@
 \NeedsTeXFormat{LaTeX2e}[1995/12/01]
 \ProvidesClass{maa-monthly} %[last revised 2013/08/08]
 
-\usepackage{times}
+%\usepackage{times}
 \renewcommand{\ttdefault}{cmtt}
 
 \DeclareFontShape{OT1}{cmtt}{m}{n}
@@ -119,48 +119,7 @@
             \topsep12\p@ \@plus2\p@ \@minus2\p@
             \itemsep0\p@}
 \let\@listI\@listi
-\renewcommand\normalsize{%
-   \@setfontsize\normalsize{10.5}{12}%
-   \abovedisplayskip 11\p@ \@plus3\p@ \@minus3\p@
-   \abovedisplayshortskip\abovedisplayskip
-   \belowdisplayshortskip\abovedisplayskip
-   \belowdisplayskip \abovedisplayskip
-   \let\@listi\@listI}
-\DeclareMathSizes{10.5}     {10.5}   {7}{6}
 
-\normalsize
-\renewcommand\small{%
-   \@setfontsize\small\@ixpt{11}%
-   \abovedisplayskip 8.5\p@ \@plus2\p@ \@minus2\p@
-   \abovedisplayshortskip\abovedisplayskip
-   \belowdisplayshortskip\abovedisplayskip
-   \def\@listi{\leftmargin\leftmargini
-               \topsep 4\p@ \@plus2\p@ \@minus2\p@
-               \parsep 2\p@ \@plus\p@ \@minus\p@
-               \itemsep \parsep}%
-   \belowdisplayskip \abovedisplayskip
-}
-\DeclareMathSizes{9}     {9}   {6}{5}
-\renewcommand\footnotesize{%
-   \@setfontsize\footnotesize{8.2}{10}%
-   \abovedisplayskip 6\p@ \@plus2\p@ \@minus2\p@
-   \abovedisplayshortskip\abovedisplayskip
-   \belowdisplayshortskip\abovedisplayskip
-   \def\@listi{\leftmargin\leftmargini
-               \topsep 3\p@ \@plus\p@ \@minus\p@
-               \itemsep \parsep}%
-   \belowdisplayskip \abovedisplayskip
-}
-\DeclareMathSizes{8}     {8}   {6}{5}
-\renewcommand\scriptsize{\@setfontsize\scriptsize\@viiipt{9.5}}
-\renewcommand\tiny{\@setfontsize\tiny{6}{6}}
-\newcommand\copysize{\@setfontsize\copysize{7.5}{8}}
-\renewcommand\large{\@setfontsize\large{12.5}{13}}
-\DeclareMathSizes{12.5}     {11}   {9}{9}
-\renewcommand\Large{\@setfontsize\Large{14}{16}}
-\renewcommand\LARGE{\@setfontsize\LARGE{18.5}{20}}
-\renewcommand\huge{\@setfontsize\huge{20}{24}}
-\renewcommand\Huge{\@setfontsize\Huge{20}{24}}
 
 %%
 %% ARTICLE OPENER
@@ -360,29 +319,6 @@
                                      \fi
                        #7}}\fi
      \@xsect{#5}}
-
-\renewcommand\section{\@startsection {section}{1}{\z@}%
-	{-12pt \@plus -2pt \@minus -2pt}%
-	{-.5em}%
-	{\normalsize\bfseries\global\uppercasetrue}}
-\renewcommand\subsection{\@startsection{subsection}{2}{\z@}%
-	{-12pt \@plus -2pt \@minus -2pt}%
-	{-.5em}%
-	{\normalsize\bfseries}}
-\renewcommand\subsubsection{\@startsection{subsubsection}{3}{\z@}%
-                                     {-12pt \@plus -2pt \@minus -2pt}%
-                                     {-.5em}%
-                                     {\normalfont\normalsize\itshape}}
-\renewcommand\paragraph{\@startsection{paragraph}{3}{\z@}%
-                                     {-12pt \@plus -2pt \@minus -2pt}%
-                                     {-.5em}%
-                                     {\normalfont\normalsize\bfseries}}
-
-\newcommand\fillerhead{\@startsection {section}{3}{\z@}%
-	{-0.001pt}%
-	{\medskipamount}%
-	{\normalsize\global\uppercasefalse\sffamily\bfseries}}
-\newcommand\fillerheadmark[1]{\relax}
 
 
 
