--- a/2009.06722/revprimes-fermat04v05.tex
+++ b/2009.06722/revprimes-fermat04v05.tex
@@ -1,4 +1,4 @@
-\documentclass{article}
+\documentclass[12pt]{article}
 \usepackage{maa-monthly-noheader}
 
 %% IF YOU HAVE FONTS INSTALLED
@@ -22,6 +22,34 @@
 \newcommand{\FLT}{\mathrm{FLT}}
 \newcommand{\DM}{\mathrm{DM}}
 \newcommand{\IRT}{\mathrm{IRT}}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
+
+\input{../helpers/fix-underbrace.tex}
+%\input{../helpers/psu-sc-headers.tex}
+
+\usepackage{cite}
+
 \begin{document}
 
 \title{
@@ -100,11 +128,13 @@ In this way we link Euclid's theorem to some very beautiful and significant
 results of modern mathematics.
 
 Here is a brief outline of the article.
+
 In Section {\ref{sec:Fermat}} we link Euclid's theorem
 to Fermat's last theorem,  eventually 
 proved by Wiles \cite{Wiles:1995}, and to a theorem of Schur (1916),
 which is often considered to be 
-the starting point of combinatorial number theory.\\
+the starting point of combinatorial number theory.
+
 In Section {\ref{sec:Roth}}
 the link is to a theorem of Roth (1953) on the density of integers
 without arithmetic progressions.
